--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
@@ -37,12 +37,12 @@ ext {
     artifactName = 'ChatRecyclerView'
     artifactDescription = 'Implement your user friendly chat RecyclerView in one line!'
     artifactLabels = ['RecyclerView', 'chat']
-    releaseVersionCode = 3
-    releaseVersionName = '1.2.0'
+    releaseVersionCode = 4
+    releaseVersionName = '1.2.1'
 
-    androidCompileSdkVersion = 'Google Inc.:Google APIs:23'
-    androidBuildToolsVersion = '23.0.3'
-    androidSupportSdkVersion = '23.4.0'
-    minSdkVersion = 14
-    targetSdkVersion = 23
+    androidCompileSdkVersion = 24
+    androidBuildToolsVersion = '25.0.1'
+    androidSupportSdkVersion = '25.0.1'
+    minSdkVersion = 16
+    targetSdkVersion = 24
 }
